--- a/index.html
+++ b/index.html
@@ -1,195 +1,114 @@
 <!DOCTYPE html>
 <html lang="id">
-
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Laporan Evakuasi Damkar</title>
 
 <style>
-  body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-    background: #f2f4f7;
-    margin: 0;
-    padding: 12px;
-  }
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f6f8;
+  padding: 12px;
+}
 
-  h2, h3 {
-    margin-top: 16px;
-    margin-bottom: 8px;
-  }
+h2 {
+  text-align: center;
+}
 
-  label {
-    font-weight: 600;
-    font-size: 14px;
-  }
+label {
+  font-weight: bold;
+  margin-top: 12px;
+  display: block;
+}
 
-  input, select, textarea, button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 6px;
-    margin-bottom: 12px;
-    font-size: 14px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
+input, select, textarea, button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 6px;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
 
-  textarea {
-    min-height: 90px;
-  }
+textarea {
+  min-height: 80px;
+}
 
-  button {
-    background: #e53935;
-    color: white;
-    font-weight: bold;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-  }
+button {
+  background: #d32f2f;
+  color: white;
+  border: none;
+  font-weight: bold;
+}
 
-  button:active {
-    background: #c62828;
-  }
+button.copy {
+  background: #1976d2;
+}
 
-  hr {
-    border: none;
-    height: 1px;
-    background: #ddd;
-    margin: 16px 0;
-  }
-
-  #output {
-    background: #fff;
-    font-family: monospace;
-  }
-
-  #petugas input {
-    width: auto;
-    margin-right: 6px;
-  }
+#petugas {
+  background: #fff;
+  padding: 10px;
+  border-radius: 6px;
+}
 </style>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Laporan Damkar Sektor X Pesanggrahan</title>
 </head>
+
 <body>
 
-<h2>Form Laporan</h2>
-<h2>Penyelamatan/Kebakaran</h2>
+<h2>Laporan Evakuasi</h2>
 
-<label>Data</label><br>
-<select id="dataJenis">
-  <option value="Penyelamatan">Penyelamatan</option>
-  <option value="Kebakaran">Kebakaran</option>
-</select><br><br>
-
-<label>Jenis Evakuasi</label><br>
-<select id="evakuasiInput">
-  <option value="">-- Pilih Evakuasi --</option>
-  <option>Kebakaran</option>
-  <option>Ular</option>
-  <option>Kucing</option>
-  <option>Tawon</option>
-  <option>Lebah</option>
-  <option>Biawak</option>
-  <option>Banjir</option>
-  <option>Cincin</option>
-  <option>Kunci</option>
-  <option>Kunci Mobil</option>
-  <option>HP</option>
-  <option>Pohon Tumbang</option>
-  <option>Mobil Terperosok</option>
-  <option>Lainnya</option>
-</select><br><br>
-
-<label>Grup Jaga</label><br>
-<select id="grupJaga">
-  <option value="">-- Pilih --</option>
-  <option>A</option>
-  <option>B</option>
-  <option>C</option>
-</select><br><br>
-
-<label>Tanggal</label><br>
-<input type="date" id="tanggal"><br><br>
-
-<hr>
-
-<label>Nama Pelapor</label><br>
-<input type="text" id="pelapor"><br><br>
-
-<label>No HP</label><br>
-<input type="text" id="hp"><br><br>
-
-<label>Alamat Pelapor</label><br>
-<textarea id="alamat"></textarea><br><br>
-
-<hr>
-
-<h3>Perwira Piket 401</h3>
-<select id="perwira">
-  <option value="">-- Pilih Perwira --</option>
-
-  <option value="H. Asril Rizal, S.Sos." data-jabatan="Kasudin Jakarta Selatan (4-3)">H. Asril Rizal, S.Sos.</option>
-  <option value="Sjukri, S.Sos., M.Si." data-jabatan="Kasie Ops Dalkarmat (4-4)">Sjukri, S.Sos., M.Si.</option>
-  <option value="Dwi Ratna Swadharma, S.Pd., M.A." data-jabatan="Kasie Tata Usaha (4-6)">Dwi Ratna Swadharma, S.Pd., M.A.</option>
-  <option value="Sutaka, S.E., M.M." data-jabatan="Kasie Sarana (4-7)">Sutaka, S.E., M.M.</option>
-  <option value="Yuni Eka Lestari, S.T." data-jabatan="Kasie Pencegahan (4-8)">Yuni Eka Lestari, S.T.</option>
-  <option value="Kusnanto, S.H." data-jabatan="Kasie Kecamatan Tebet (4-11 Pati)">Kusnanto, S.H.</option>
-  <option value="Ngatiyo, S.E." data-jabatan="Kasie Kecamatan Setiabudi (4-12 Pati)">Ngatiyo, S.E.</option>
-  <option value="Sarono, S.E." data-jabatan="Kasie Kecamatan Mampang Prapatan (4-13 Pati)">Sarono, S.E.</option>
-  <option value="H. Wirawan Aries Wibowo, S.E." data-jabatan="Kasie Kecamatan Pasar Minggu (4-14 Pati)">H. Wirawan Aries Wibowo, S.E.</option>
-  <option value="Paryo, S.T., M.M." data-jabatan="Kasie Kecamatan Kebayoran Lama (4-15 Pati)">Paryo, S.T., M.M.</option>
-  <option value="Anwar Kamsari, S.T." data-jabatan="Kasie Kecamatan Cilandak (4-16 Pati)">Anwar Kamsari, S.T.</option>
-  <option value="Ruwanto, S.H." data-jabatan="Kasie Kecamatan Kebayoran Baru (4-17 Pati)">Ruwanto, S.H.</option>
-  <option value="H. Imbang Satriana, S.Pd., M.M." data-jabatan="Kasie Kecamatan Pancoran (4-18 Pati)">H. Imbang Satriana, S.Pd., M.M.</option>
-  <option value="Mohammad Slamet, S.Ip." data-jabatan="Kasie Kecamatan Jagakarsa (4-19 Pati)">Mohammad Slamet, S.Ip.</option>
-  <option value="Poengky Hermingto, S.E." data-jabatan="Kasie Kecamatan Pesanggrahan (4-20 Pati)">Poengky Hermingto, S.E.</option>
-</select>
-
-<hr>
-
-<h3>Pelaksanaan</h3>
-Terima laporan: <input type="time" id="terima"> WIB<br>
-Meluncur: <input type="time" id="meluncur"> WIB<br>
-Selesai: <input type="time" id="selesai"> WIB<br><br>
-
-<hr>
-
-<h3>Pengerahan Personil</h3>
-Jumlah Personil: <input type="number" id="jumlahPersonil"><br>
-Jumlah Unit: <input type="text" id="unit" placeholder="contoh: 1 mobil / 2 motor"><br>
-
-<hr>
-
-<h3>Jenis</h3>
-<input type="text" id="jenisUtama" placeholder="Hewan Buas / Evakuasi / Kebakaran"><br>
-<input type="text" id="jenisDetail" placeholder="Ular / Banjir / Cincin"><br><br>
-
-<hr>
-
-<h3>Kronologis</h3>
-<textarea id="kronologis" rows="5" cols="70"></textarea><br><br>
-
-<h3>Tindakan</h3>
-<textarea id="tindakan" rows="5" cols="70"></textarea><br><br>
-
-<hr>
-
-<h3>Kompi</h3>
+<label>Kompi</label>
 <select id="kompi">
-  <option value="">-- Pilih Kompi --</option>
   <option>Kompi A</option>
   <option>Kompi B</option>
   <option>Kompi C</option>
 </select>
 
+<label>Evakuasi</label>
+<input id="evakuasiInput">
+
+<label>Tanggal</label>
+<input type="date" id="tanggal">
+
+<label>Alamat</label>
+<textarea id="alamat"></textarea>
+
+<label>Perwira Piket</label>
+<select id="perwira">
+  <option data-jabatan="Danru">Perwira A</option>
+  <option data-jabatan="Danru">Perwira B</option>
+  <option data-jabatan="Danru">Perwira C</option>
+</select>
+
+<label>Terima</label>
+<input type="time" id="terima">
+<label>Meluncur</label>
+<input type="time" id="meluncur">
+<label>Selesai</label>
+<input type="time" id="selesai">
+
+<label>Jumlah Personil</label>
+<input id="jumlahPersonil">
+
+<label>Unit</label>
+<input id="unit" placeholder="Contoh: 1 Unit Light Rescue">
+
+<label>Kronologis</label>
+<textarea id="kronologis"></textarea>
+
+<label>Tindakan</label>
+<textarea id="tindakan"></textarea>
+
+<label>Petugas</label>
 <div id="petugas"></div>
 
-<br>
-<button onclick="generateLaporan()">Generate Laporan</button>
+<button onclick="generateLaporan()">Generate</button>
+<button class="copy" onclick="copyLaporan()">📋 Copy</button>
 
-<h3>Hasil Laporan</h3>
-<textarea id="output" rows="30" cols="90" readonly></textarea>
+<label>Output</label>
+<textarea id="output"></textarea>
 
 <script src="app.js"></script>
 </body>
