--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<div id="menuAwal">
+  <h2>Pilih Jenis Laporan</h2>
+
+  <button onclick="pilihMenu('kebakaran')">🔥 Kebakaran</button>
+  <button onclick="pilihMenu('evakuasi')">🚑 Evakuasi</button>
+  <button onclick="pilihMenu('edukasi')">📢 Edukasi</button>
+</div>
+
+  <div id="formEvakuasi" style="display:none;">
+  <!-- SEMUA KODE FORM YANG SUDAH ADA MASUK KE SINI -->
+</div>
+
+  
 <style>
   body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -154,3 +167,4 @@ Jumlah Unit: <input type="text" id="unit" placeholder="contoh: 1 mobil / 2 motor
 <script src="app.js"></script>
 </body>
 </html>
+
