Update form awal index.html

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
     width: auto;
     margin-right: 6px;
   }
+
+  #menuAwal button {
+  font-size: 18px;
+  padding: 16px;
+  margin-bottom: 12px;
+  border-radius: 12px;
+}
+
 </style>
 
 <head>
@@ -167,4 +175,5 @@ Jumlah Unit: <input type="text" id="unit" placeholder="contoh: 1 mobil / 2 motor
 <script src="app.js"></script>
 </body>
 </html>
+
 
